# reqable-mcp

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE_CN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_PROGRESS.md  README.md  README_CN.md  RELEASE_CHECKLIST.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
examples/: claude-desktop-config.json
npm-bridge/: README.md  package.json  reqable-mcp-0.1.0.tgz
src/reqable_mcp/: __init__.py  __main__.py  config.py  ingest_server.py  models.py  normalizer.py  server.py  storage.py
tests/: test_config.py  test_ingest_server.py  test_normalizer.py  test_server.py  test_storage.py
