[project]
name = "reqable-mcp"
version = "0.1.0"
description = "MCP server for Reqable local capture data"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "lianhua" }]
requires-python = ">=3.10"
keywords = ["mcp", "reqable", "http", "capture", "har", "proxy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/ElonJask/reqable-mcp"
Repository = "https://github.com/ElonJask/reqable-mcp"
Issues = "https://github.com/ElonJask/reqable-mcp/issues"

[project.optional-dependencies]
compression = [
    "brotli>=1.1.0",
    "zstandard>=0.23.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
reqable-mcp = "reqable_mcp.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reqable_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/README_CN.md",
    "/LICENSE",
    "/RELEASE_CHECKLIST.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
